fix to perfomance export
